--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "pg": "^8.14.1"
   }
 }
