--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.1.4"
   }
 }
