--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "multer": "^1.4.5-lts.2",
+    "pg": "^8.11.3",
+    "ssh2-sftp-client": "^12.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.4"
