--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,6 @@ services:
       - path: /*
         headers:
           - name: Content-Security-Policy
-            value: default-src 'self'; script-src 'self' 'unsafe-inline' https://www.youtube.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://sitoform.com https://via.placeholder.com; frame-src 'self' https://www.youtube.com; connect-src 'self' https://sitoform25.onrender.com https://ydfkrwjafnuvdvezpkcp.supabase.co
+            value: default-src 'self'; script-src 'self' 'unsafe-inline' https://www.youtube.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' https://sitoform.com https://via.placeholder.com https://img.youtube.com blob:; frame-src 'self' https://www.youtube.com https://player.vimeo.com; connect-src 'self' https://sitoform25.onrender.com https://ydfkrwjafnuvdvezpkcp.supabase.co https://www.youtube.com https://player.vimeo.com
+          - name: Permissions-Policy
+            value: compute-pressure=(self 'https://www.youtube.com')
